--- a/final/python/eval.ipynb
+++ b/final/python/eval.ipynb
@@ -551,7 +551,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('general_slu')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -565,12 +565,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5661c73bf5f4ce6179e3148e3c825b6832fd4cb82045a10b114db5b9548c77c1"
+    "hash": "0187c04380c37fe9a727315c9c0a44c9bc1aef679fba71be4a418d194630799b"
    }
   }
  },
