finish testing for similarity and DTW

--- a/final/python/eval.ipynb
+++ b/final/python/eval.ipynb
@@ -164,11 +164,11 @@
     "    table[0, 0] = int(recog[0] != ref[0])\n",
     "    # init the first row\n",
     "    for i in range(1, table.shape[0]):\n",
-    "        table[i, 0] = int(recog[i] != ref[0]) + table[i-1, 0]\n",
+    "        table[i, 0] = table[i-1, 0] + 1\n",
     "        \n",
     "    # init the first col\n",
     "    for i in range(1, table.shape[1]):\n",
-    "        table[0, i] = int(recog[0] != ref[i]) + table[0, i-1]\n",
+    "        table[0, i] = table[0, i-1] + 1\n",
     "        \n",
     "    for i in range(1, table.shape[0]):\n",
     "        for j in range(1, table.shape[1]):\n",
